[gd_scene load_steps=4 format=3 uid="uid://b3ge83l8fbscy"]

[ext_resource type="Script" uid="uid://n81ock5nq6lu" path="res://scripts/ui.gd" id="1_onfsl"]
[ext_resource type="Theme" uid="uid://bfvam7jua4uga" path="res://misc/main_theme.tres" id="2_s2f8l"]
[ext_resource type="Texture2D" uid="uid://dki5kcun04fsg" path="res://assets/sprites/skull.png" id="3_kee8w"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_onfsl")

[node name="Left" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -96.0
offset_right = 212.0
offset_bottom = 96.0
grow_vertical = 2
alignment = 1

[node name="ButtonPanelContainer" type="PanelContainer" parent="Left"]
layout_mode = 2

[node name="ShopButton" type="Button" parent="Left/ButtonPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_s2f8l")
text = "SHOP"

[node name="StatsPanelContainer" type="PanelContainer" parent="Left"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Left/StatsPanelContainer"]
layout_mode = 2

[node name="TileRevealedLabel" type="Label" parent="Left/StatsPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = " TILES: 0 "
horizontal_alignment = 1

[node name="FlagsPlacedLabel" type="Label" parent="Left/StatsPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = " FLAGS: 0 "
horizontal_alignment = 1

[node name="Shop" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.30923
offset_top = -132.0
offset_right = 214.30933
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Shop"]
layout_mode = 2

[node name="ShopItemButtons" type="VBoxContainer" parent="Shop/Panel"]
layout_mode = 0
offset_left = 14.309235
offset_top = 16.0
offset_right = 182.30923
offset_bottom = 216.0

[node name="Item1Button" type="Button" parent="Shop/Panel/ShopItemButtons"]
layout_mode = 2
text = "vitality"

[node name="Item2Button" type="Button" parent="Shop/Panel/ShopItemButtons"]
layout_mode = 2
text = "stamina"

[node name="Item3Button" type="Button" parent="Shop/Panel/ShopItemButtons"]
layout_mode = 2
text = "dexterity"

[node name="Item4Button" type="Button" parent="Shop/Panel/ShopItemButtons"]
layout_mode = 2
text = "intelligence"

[node name="Item5Button" type="Button" parent="Shop/Panel/ShopItemButtons"]
layout_mode = 2
text = "faith"

[node name="TextureRect" type="TextureRect" parent="Shop/Panel"]
layout_mode = 0
offset_left = 190.30923
offset_top = 16.0
offset_right = 398.30923
offset_bottom = 216.0
texture = ExtResource("3_kee8w")

[connection signal="pressed" from="Left/ButtonPanelContainer/ShopButton" to="." method="_on_shop_button_pressed"]
